--- a/FirstGame/build.gradle
+++ b/FirstGame/build.gradle
@@ -95,6 +95,8 @@ project(":html") {
         compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
         compile "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+        compile 'net.dermetfan.libgdx-utils:libgdx-utils:0.7.2:sources'
+        compile 'net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.7.2:sources'
     }
 }
 
