--- a/FirstGame/android/AndroidManifest.xml
+++ b/FirstGame/android/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.mygdx.game.AndroidLauncher"
-            android:label="@string/app_name" 
-            android:screenOrientation="landscape"
+            android:label="@string/app_name"
+            android:screenOrientation="sensor"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
