--- a/FirstGame/android/AndroidManifest.xml
+++ b/FirstGame/android/AndroidManifest.xml
@@ -2,9 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mygdx.game"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="24" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="24"
+              tools:overrideLibrary="com.google.firebase.firebase_ads,
+                                     com.google.android.gms.ads.impl, com.google.android.gms.ads, com.google.android.gms, com.google.android.gms.base,
+                                     com.google.android.gms.tasks, com.google.android.gms.clearcut,
+                                     com.google.android.gms.measurement, com.google.firebase, com.google.android.gms.measurement.impl, com.google.firebase.iid"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
