--- a/FirstGame/android/AndroidManifest.xml
+++ b/FirstGame/android/AndroidManifest.xml
@@ -11,6 +11,7 @@
                                      com.google.android.gms.tasks, com.google.android.gms.clearcut,
                                      com.google.android.gms.measurement, com.google.firebase, com.google.android.gms.measurement.impl, com.google.firebase.iid"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
