Leaderboards (todavia no funciona)
descomentar la linea de GoogleServices.connect

--- a/pondSkater/android/build.gradle
+++ b/pondSkater/android/build.gradle
@@ -22,6 +22,7 @@ android {
         applicationId "com.simplebojocs.pondskater"
         minSdkVersion 9
         targetSdkVersion 24
+        multiDexEnabled true
     }
 }
 
