--- a/pondSkater/android/AndroidManifest.xml
+++ b/pondSkater/android/AndroidManifest.xml
@@ -19,8 +19,14 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <meta-data
+            android:name="com.google.android.gms.games.APP_ID"
+            android:value="@string/app_id" />
+        <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCVq-dhkS40O81ckRwpR16C-1Ajtlqq-nc" />
         <activity
             android:name="com.simplebojocs.pondskater.AndroidLauncher"
             android:label="@string/app_name"
