--- a/pondSkater/build.gradle
+++ b/pondSkater/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     repositories {
+        jcenter()
         mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.1.0'
         classpath 'com.google.gms:google-services:3.0.0'
     }
@@ -27,6 +28,7 @@ allprojects {
     }
 
     repositories {
+        jcenter()
         mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
