--- a/pondSkater2/android/build.gradle
+++ b/pondSkater2/android/build.gradle
@@ -22,6 +22,8 @@ android {
         applicationId "com.simplebojocs.pondskater2"
         minSdkVersion 9
         targetSdkVersion 24
+        versionCode 3
+        versionName "1.0.1"
         multiDexEnabled true
     }
 }
