[Amazon] add Project configuration for Amazon

--- a/pondSkater2/android/AndroidManifest.xml
+++ b/pondSkater2/android/AndroidManifest.xml
@@ -12,6 +12,7 @@
                                      com.google.android.gms.measurement, com.google.firebase, com.google.android.gms.measurement.impl, com.google.firebase.iid"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -42,6 +43,11 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             />
+        <activity
+            android:name="com.amazon.device.ads.AdActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            />
+
 
     </application>
 
